# pycgs

./: .gitignore  README.md  pyproject.toml
docs/: _navbar.md  index.html
docs/en/: README.md
docs/zh/: README.md
evals/cgs_nmm10000/: README.md  requirements.txt
evals/cgs_nmm10000/dataset/nmm10000/: nmm10000_primary_term_dict.json  nmm10000_texts.csv
evals/cgs_nmm10000/results/: nmm10000_cgs_results.csv  nmm10000_jieba_results.csv
evals/cgs_nmm10000/scripts/: eval_cgs.py  eval_jieba.py
pycgs/: cgs.py  types.py
pycgs/cgs/: __init__.py  algorithms.py  primary_term_extractor.py
test/: test_cgs.py
tests/: test_cgs.py
tests/test_cgs/: test_algorithms.py  test_primary_term_extractor.py
